# spdlog_demo

./: CMakeLists.txt
sources/: main.cpp
